Added Maven Enforcer Maven plugin.  Updated source and target version.  Updated some dependency versions.